fix coding style according to PMD tool